--- a/Content/FixtureFinder.css
+++ b/Content/FixtureFinder.css
@@ -29,8 +29,6 @@
     text-shadow: 1px 1px 1px #000;
 }
 
-
-
 @font-face {
     font-family: 'KGHAPPY';
     src: url('../fonts/KGHAPPY.ttf') format('truetype');
@@ -44,9 +42,11 @@
     font-family: 'Ubuntu-B';
     font-size: 18px;
 }
+
 .navbarItem:hover{
     text-shadow: 0.5px 0.5px 0.5px #000; 
 }
+
 @font-face {
     font-family: 'Ubuntu-R';
     src: url('../fonts/Ubuntu-R.ttf') format('truetype');
@@ -56,9 +56,11 @@
     font-family: 'Ubuntu-B';
     src: url('../fonts/Ubuntu-B.ttf') format('truetype');
 }
+
 .navbarcolor{
     background-color:#f0eceb;
 }
+
 #bg{
     background:url('/Images/resized fans.jpg') no-repeat center center;
     height: 844px;
@@ -69,6 +71,7 @@
     padding-top: 5px;
     padding-bottom: 0px;
 }
+
 .peopleCarouselImg img {
     width: 100%;
     height: auto;
@@ -85,6 +88,7 @@
     margin-right: 0;
     margin-left: 0;
 }
+
 .fontstyling{
     font-weight: 200;
     padding-left: 16px;
@@ -105,21 +109,22 @@
 }
 
 .panelstyle{
-    margin-top:75px;
+    top:150px;
     padding-top:20px;
     background-color:#EDEDED;
-    height:750px;
+    height:650px;
     overflow-y: scroll;
     -webkit-scrollbar:no-button;  
- 
 }
+
 .panel{
 	background-color: rgba(255, 255, 255, 0.9);
-	  }
-
-.buttonstyle{
-    padding-top: 5px;
 }
+
+.panel-body {
+    padding-top: 0px;
+}
+
 .scrollbar{
               
     -webkit-scrollbar-button:;  
@@ -129,6 +134,7 @@
     -webkit-scrollbar-corner:;       
     -webkit-resizer:;   
 }
+
 ::-webkit-scrollbar {
     width: 12px;
 }
@@ -142,6 +148,7 @@
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
+
 .widescreen{
     padding-left:0px;
     padding-right:0px;
@@ -154,24 +161,75 @@
     color:#5ac3ec;
     float: left;
 }
+
 .caroseltext{
     color:white;   
     font-family: 'Ubuntu-R';
     font-size: 30px;
 }
+
 .caroselbuttons{
     color:white;   
     font-family: 'Ubuntu-R';
     font-size: 18px;
+    background-color:#5ac3ec;
+    border-color:#5ac3ec;
+
 }
+
+.caroselbuttons:hover{
+    -webkit-box-shadow: 5px 7px 0px 0px rgba(0,0,0,0.25);
+    -moz-box-shadow: 5px 7px 0px 0px rgba(0,0,0,0.25);
+    box-shadow: 5px 7px 0px 0px rgba(0,0,0,0.25);
+    background-color:#5ac3ec;
+}
+
 .modaltext{
     color:#283018;   
     font-family: 'Ubuntu-B';
     font-size: 18px;
 }
+
 .placeholdertext{
-     color:#283018;   
+    color:#283018;   
     font-family: 'Ubuntu-R';
     font-size: 18px;
+}
+#modalcenter{
+    outline: none;
+    top:200px;
+}
+
+.teamnametext{
+    color:#283018;   
+    font-family: 'Ubuntu-B';
+    font-size: 22px;
+}
+
+.stadiumtext{
+    color:#283018;   
+    font-family: 'Ubuntu-R';
+    font-size: 18px;
+}
+
+.locationtext{
+    color:#283018;   
+    font-family: 'Ubuntu-R';
+    font-size: 12px;
+}
+
+.dividerwidth{
+    color: #283018;
+    background-color: #283018;
+    height: 2px;
+}
+
+.headingtext{
+    font-weight: 200;
+    padding-left: 16px;
+    color:#283018;   
+    font-family: 'Ubuntu-B';
+    font-size: 24px;
+    text-decoration:underline;
 }
 
