--- a/Content/FixtureFinder.css
+++ b/Content/FixtureFinder.css
@@ -204,18 +204,23 @@
     color:#283018;   
     font-family: 'Ubuntu-B';
     font-size: 22px;
+    margin-bottom:0px;
+    margin-top:10px;
 }
 
 .stadiumtext{
     color:#283018;   
     font-family: 'Ubuntu-R';
     font-size: 18px;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 
 .locationtext{
     color:#283018;   
     font-family: 'Ubuntu-R';
     font-size: 12px;
+    margin-top:10px;
 }
 
 .dividerwidth{
@@ -249,4 +254,59 @@
     -moz-box-shadow: 5px 7px 0px 0px rgba(0,0,0,0.25);
     box-shadow: 5px 7px 0px 0px rgba(0,0,0,0.25);
     background-color:#5ac3ec;
+}
+
+.checkboxalign{
+    float:right;
+    padding-top:5px;
+    padding-right:65px;
+}
+
+.checkboxheading{
+    margin-bottom:0px;
+}
+
+.checkboxstying{
+    margin-top:5px;
+}
+
+.iframestyling{
+    float:right;
+    margin-top:35px;
+}
+
+.sizing{
+    width:40px;
+    height:40px;
+}
+
+.alignheading{
+    color:#283018;   
+    font-family: 'Ubuntu-B';
+    font-size: 30px;
+    margin-bottom:0px;
+    margin-top:10px;
+    text-align: center;
+}
+
+.alignstadium{
+    float:left;
+    padding-top:25px;
+    padding-right:25px;
+    width:390px;
+}
+
+.aligntext{
+    float:right;
+}
+
+.headingalign{
+    
+    font-weight: 200;
+    padding-left: 16px;
+    color:#283018;   
+    font-family: 'Ubuntu-B';
+    font-size: 24px;
+    margin-top:40px;
+    margin-bottom:20px;
 }
