--- a/Content/FixtureFinder.css
+++ b/Content/FixtureFinder.css
@@ -307,6 +307,47 @@
     color:#283018;   
     font-family: 'Ubuntu-B';
     font-size: 24px;
-    margin-top:40px;
-    margin-bottom:20px;
+    margin-top:30px;
+    margin-bottom:15px;
 }
+
+.alignmaptext{
+    padding-top:20px;
+    padding-right:410px;
+}
+
+.fontalign{
+    text-align:justify;
+}
+
+.distancepadding{
+    margin-top:0px;
+}
+
+.datealign{
+    text-align: center;
+    margin-top:0px;
+    margin-bottom:0px;
+}
+
+.websitealign{
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* This is the dangerous one in WebKit, as it breaks things wherever */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+    
+    /* Adds a hyphen where the word breaks, if supported (No Blink) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
+.alignright{
+    text-align:right;
+}
+
+
