--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
         @Styles.Render("~/Content/css")  
         @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/googlemaps.js" type="text/javascript"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link type="text/css" rel="stylesheet" href="~/Content/FixtureFinder.css" /> @*~ means home*@
 
