last and final commit

--- a/Content/FixtureFinder.css
+++ b/Content/FixtureFinder.css
@@ -363,4 +363,13 @@
     padding-top:10px;
 }
 
+.adjustlocation{
+    padding-top:30px;
+    float:left;
+}
+
+.imagesize{
+    width:25px;
+    height:25px;
+}
 
