--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,15 +20,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <div class="brand"><a class="logoheading" href="#"><img class="headermargin bluecolor pull-left" src="~/Images/Logo no text.png" height="40px" width="40px"/><span class="headingshadow">FixtureFinder</span> </a></div>
+                <div class="brand"><a class="logoheading" href="http://localhost:50009/FixtureFinder/Home" target="_blank"><img class="headermargin bluecolor pull-left" src="~/Images/Logo no text.png" height="40px" width="40px"/><span class="headingshadow">FixtureFinder</span> </a></div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="navbarItem"><a href="http://localhost:50009/FixtureFinder/Home" target="_blank">Home</a></li>
-                    <li class="navbarItem"><a href="#" target="_blank">About us</a></li>
-                    <li class="navbarItem"><a href="#" target="_blank">Sports</a></li>
-                    <li class="navbarItem"><a href="#" target="_blank">Help</a></li>
-                    <li class="navbarItem"><a href="#" target="_blank">Contact us</a></li>
+                </ul>
             </div>
         </div>
     </div>
