--- a/Views/FixtureFinder/Results.cshtml
+++ b/Views/FixtureFinder/Results.cshtml
@@ -4,7 +4,7 @@
 //ViewBag.Title = "FixtureFinder";
 }
 <div class="row">
-    <div class="col-md-12" id="bg">
+    <div class="col-md-12 container-fluid" id="bg">
         <div class="row">
             <div class="col-md-6 col-md-offset-3 panel panel-default panelstyle scrollbar">
         <h3 class="panel-title headingtext">Results</h3>
